add cursor pointer

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <li class="game"><img src="img//Hogwarts.webp" alt="Hogwarts legacy cover art - ps5"></li>
             <li class="game"><img src="img/RatchetAndClank.webp" alt="Ratchet and clanck rift apart cover art - ps5">
             </li>
+            <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
+            <li class="game"><img src="img//GodOfWarRagnarok.webp" alt="God of war Ragnarok cover art - ps5"></li>
+            <li class="game"><img src="img//Hogwarts.webp" alt="Hogwarts legacy cover art - ps5"></li>
+            <li class="game"><img src="img/RatchetAndClank.webp" alt="Ratchet and clanck rift apart cover art - ps5">
+            </li>
         </ul>
     </main>
 </body>
