add filter inputs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <main>
         <section class="inputs">
-
+            <label for="" class="label">Indie</label>
+            <label for="" class="label">Open world</label>
+            <label for="" class="label">Action</label>
+            <input type="checkbox" class="filter">
+            <input type="checkbox" class="filter">
+            <input type="checkbox" class="filter">
         </section>
         <ul class="games">
             <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
