add labels for filter

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <main>
         <section class="inputs">
-            <label for="" class="label">Indie</label>
-            <label for="" class="label">Open world</label>
-            <label for="" class="label">Action</label>
-            <input type="checkbox" class="filter">
-            <input type="checkbox" class="filter">
-            <input type="checkbox" class="filter">
+            <input id="checkbox-indie" type="checkbox" class="filter">
+            <label for="checkbox-indie" class="label">Indie</label>
+            <input id="checkbox-open-world" type="checkbox" class="filter">
+            <label for="checkbox-open-world" class="label">Open world</label>
+            <input id="checkbox-action" type="checkbox" class="filter">
+            <label for="checkbox-action" class="label">Action</label>
         </section>
         <ul class="games">
             <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
