add styling for labels

--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
 <body>
     <main>
         <section class="inputs">
-            <input id="checkbox-indie" type="checkbox" class="filter">
-            <label for="checkbox-indie" class="label">Indie</label>
-            <input id="checkbox-open-world" type="checkbox" class="filter">
-            <label for="checkbox-open-world" class="label">Open world</label>
-            <input id="checkbox-action" type="checkbox" class="filter">
-            <label for="checkbox-action" class="label">Action</label>
+            <div>
+                <input id="checkbox-indie" type="checkbox" class="filter">
+                <label for="checkbox-indie" class="label">Indie</label>
+            </div>
+            <div>
+                <input id="checkbox-open-world" type="checkbox" class="filter">
+                <label for="checkbox-open-world" class="label">Open world</label>
+            </div>
+            <div>
+                <input id="checkbox-action" type="checkbox" class="filter">
+                <label for="checkbox-action" class="label">Action</label>
+            </div>
+
         </section>
         <ul class="games">
             <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
