add data category

--- a/index.html
+++ b/index.html
@@ -28,26 +28,42 @@
 
         </section>
         <ul class="games">
-            <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
-            <li class="game"><img src="img//GodOfWarRagnarok.webp" alt="God of war Ragnarok cover art - ps5"></li>
-            <li class="game"><img src="img//Hogwarts.webp" alt="Hogwarts legacy cover art - ps5"></li>
-            <li class="game"><img src="img/RatchetAndClank.webp" alt="Ratchet and clanck rift apart cover art - ps5">
-            </li>
-            <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
-            <li class="game"><img src="img//GodOfWarRagnarok.webp" alt="God of war Ragnarok cover art - ps5"></li>
-            <li class="game"><img src="img//Hogwarts.webp" alt="Hogwarts legacy cover art - ps5"></li>
-            <li class="game"><img src="img/RatchetAndClank.webp" alt="Ratchet and clanck rift apart cover art - ps5">
-            </li>
-            <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
-            <li class="game"><img src="img//GodOfWarRagnarok.webp" alt="God of war Ragnarok cover art - ps5"></li>
-            <li class="game"><img src="img//Hogwarts.webp" alt="Hogwarts legacy cover art - ps5"></li>
-            <li class="game"><img src="img/RatchetAndClank.webp" alt="Ratchet and clanck rift apart cover art - ps5">
-            </li>
-            <li class="game"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
-            <li class="game"><img src="img//GodOfWarRagnarok.webp" alt="God of war Ragnarok cover art - ps5"></li>
-            <li class="game"><img src="img//Hogwarts.webp" alt="Hogwarts legacy cover art - ps5"></li>
-            <li class="game"><img src="img/RatchetAndClank.webp" alt="Ratchet and clanck rift apart cover art - ps5">
-            </li>
+            <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
+                    alt="God of war Ragnarok cover art - ps5"></li>
+            <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
+                    alt="Hogwarts legacy cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
+                    alt="Ratchet and clanck rift apart cover art - ps5">
+            <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
+                    alt="God of war Ragnarok cover art - ps5"></li>
+            <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
+                    alt="Hogwarts legacy cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
+                    alt="Ratchet and clanck rift apart cover art - ps5">
+            <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
+                    alt="God of war Ragnarok cover art - ps5"></li>
+            <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
+                    alt="Hogwarts legacy cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
+                    alt="Ratchet and clanck rift apart cover art - ps5">
+            <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
+                    alt="God of war Ragnarok cover art - ps5"></li>
+            <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
+                    alt="Hogwarts legacy cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
+                    alt="Ratchet and clanck rift apart cover art - ps5">
+            <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
+                    alt="God of war Ragnarok cover art - ps5"></li>
+            <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
+                    alt="Hogwarts legacy cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
+                    alt="Ratchet and clanck rift apart cover art - ps5">
+
         </ul>
     </main>
 </body>
