--- a/index.html
+++ b/index.html
@@ -34,36 +34,42 @@
             <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
                     alt="Hogwarts legacy cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
-                    alt="Ratchet and clanck rift apart cover art - ps5">
+                    alt="Ratchet and clanck rift apart cover art - ps5"></li>
             <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
                     alt="God of war Ragnarok cover art - ps5"></li>
             <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
                     alt="Hogwarts legacy cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
-                    alt="Ratchet and clanck rift apart cover art - ps5">
+                    alt="Ratchet and clanck rift apart cover art - ps5"></li>
             <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
                     alt="God of war Ragnarok cover art - ps5"></li>
             <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
                     alt="Hogwarts legacy cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
-                    alt="Ratchet and clanck rift apart cover art - ps5">
+                    alt="Ratchet and clanck rift apart cover art - ps5"></li>
             <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
                     alt="God of war Ragnarok cover art - ps5"></li>
             <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
                     alt="Hogwarts legacy cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
-                    alt="Ratchet and clanck rift apart cover art - ps5">
+                    alt="Ratchet and clanck rift apart cover art - ps5"></li>
             <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
                     alt="God of war Ragnarok cover art - ps5"></li>
             <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
                     alt="Hogwarts legacy cover art - ps5"></li>
             <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
-                    alt="Ratchet and clanck rift apart cover art - ps5">
-
+                    alt="Ratchet and clanck rift apart cover art - ps5"></li>
+            <li class="game" data-category="indie"><img src="img/Dredge.webp" alt="Dredge cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img//GodOfWarRagnarok.webp"
+                    alt="God of war Ragnarok cover art - ps5"></li>
+            <li class="game" data-category="open-world"><img src="img//Hogwarts.webp"
+                    alt="Hogwarts legacy cover art - ps5"></li>
+            <li class="game" data-category="action"><img src="img/RatchetAndClank.webp"
+                    alt="Ratchet and clanck rift apart cover art - ps5"></li>
         </ul>
     </main>
 </body>
