--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <main>
         <section class="inputs">
             <div>
-                <input id="checkbox-indie" type="checkbox" class="filter">
+                <input id="checkbox-indie" type="checkbox" class="filter" checked>
                 <label for="checkbox-indie" class="label">Indie</label>
             </div>
             <div>
-                <input id="checkbox-open-world" type="checkbox" class="filter">
+                <input id="checkbox-open-world" type="checkbox" class="filter" checked>
                 <label for="checkbox-open-world" class="label">Open world</label>
             </div>
             <div>
-                <input id="checkbox-action" type="checkbox" class="filter">
+                <input id="checkbox-action" type="checkbox" class="filter" checked>
                 <label for="checkbox-action" class="label">Action</label>
             </div>
 
